--- a/style/style.css
+++ b/style/style.css
@@ -118,20 +118,7 @@ div.convohider {
     left:4px;
 }
 
-.operations {
-	display:none;
-	float:right;
-}
-
-.operations a {
-	padding:0 3px 1px 3px;
-	border-radius:2px;
-	-moz-border-radius:2px;
-    -webkit-border-radius:2px;
-	text-decoration:none;
-}
-
-.metatext {
+span.metatext {
 	display:none;
 	width:100%;
 }
@@ -142,14 +129,6 @@ table {
 
 table.bigtable {
 	margin-top:5px;
-}
-
-div.metatable {
-	width:100%;
-	padding:0px;
-	margin-bottom:3px;
-	float:left;
-	position:relative;
 }
 
 div.convoarea {
@@ -188,16 +167,20 @@ td .tweettextcell {
 	text-decoration:none;
 }
 
+.metatext a {
+	text-decoration:none;
+}
+
 .tweettext a.hover {
+	text-decoration:underline;
+}
+
+.metatext a.hover {
 	text-decoration:underline;
 }
 
 .clear {
 	clear:both;
-}
-
-div.backtotop {
-	float:left;
 }
 
 div.colswitcherform {
@@ -233,7 +216,6 @@ textarea#blocklist {
 a.button,
 a.icon {
     text-decoration: none;
-    text-shadow: 0 1px 0 #fff;
     font: bold 12px Helvetica, Arial, sans-serif;
     line-height: 27px;
     height: 27px;
