--- a/style/style.css
+++ b/style/style.css
@@ -87,7 +87,7 @@ input#status {
 }
 
 input#reply {
-	width:500px;
+	width:80%;
 	height:20px;
 	float:left;
 	padding:3px;
@@ -198,9 +198,9 @@ table.bigtable {
 }
 
 div#replybox {
-    padding:10px;
+    padding:10px 10px 20px 10px;
     margin:0;
-    width:620px;
+	height:30px;
 }
     
 tr {
