Match link colour with reply/like count

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -53,7 +53,7 @@ div#replybox {
 }
 
 .tweettext a {
-	color:#0099b9;
+	color:#395a9d;
 }
 
 .convolikearea a {
@@ -61,7 +61,7 @@ div#replybox {
 }
 
 .metatext a {
-	color:#0099b9;
+	color:#395a9d;
 }
 
 div.colswitcherform a {
