--- a/style/style.css
+++ b/style/style.css
@@ -155,6 +155,14 @@ div.columnheading span.columnbuttons {
     top:5px;
 }
 
+div.error {
+	padding: 10px;
+	margin-bottom:10px;
+}
+div.error img {
+	margin: 5px auto 0px auto;
+}
+
 div.morelessform {
     float:right;
 }
