--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -88,6 +88,21 @@ div.colswitcherform a {
 	border: 1px solid #666666;
 }
 
+div.settingsheader {
+	background: #393939;
+    background: -moz-linear-gradient(top, #666666, #393939);
+    background: -webkit-gradient(linear,
+                left top, left bottom, from(#666666), to(#393939));
+    filter: progid:DXImageTransform.Microsoft.Gradient(
+                StartColorStr='#666666', EndColorStr='#393939', GradientType=0);
+	color: white;
+}
+
+div.settingscontent {
+	background: black;
+	color: white;
+}
+
 a.button,
 a.icon {
     color: #aaaaaa;
