--- a/style/style.css
+++ b/style/style.css
@@ -287,6 +287,19 @@ div.settingscontent {
 	padding:20px;
 }
 
+div.manageaccountbuttons {
+	float:right;
+	text-align:right;
+	padding-left:20px;
+}
+
+div.account {
+	margin-left:10px;
+	margin-right:10px;
+	padding:10px;
+	width:300px;
+}
+
 textarea#blocklist {
     width:90%;
 }
