--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -93,6 +93,19 @@ div.settingsheader {
                 StartColorStr='#cccccc', EndColorStr='#aaaaaa', GradientType=0);
 }
 
+div.account {
+	background: #eeeeee;
+    background: -moz-linear-gradient(top, #dddddd, #eeeeee);
+    background: -webkit-gradient(linear,
+                left top, left bottom, from(#dddddd), to(#eeeeee));
+    filter: progid:DXImageTransform.Microsoft.Gradient(
+                StartColorStr='#dddddd', EndColorStr='#eeeeee', GradientType=0);
+}
+
+span.noaccount {
+	color:#666666;
+}
+
 a.button,
 a.icon {
     color: #666666;
