--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -103,6 +103,19 @@ div.settingscontent {
 	color: white;
 }
 
+span.noaccount {
+	color:#999999;
+}
+
+div.account {
+	background: #313131;
+    background: -moz-linear-gradient(top, #393939, #313131);
+    background: -webkit-gradient(linear,
+                left top, left bottom, from(#393939), to(#313131));
+    filter: progid:DXImageTransform.Microsoft.Gradient(
+                StartColorStr='#393939', EndColorStr='#313131', GradientType=0);
+}
+
 a.button,
 a.icon {
     color: #aaaaaa;
