--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,19 @@ div.centredgreybox {
     text-align: center;
 }
 
+div.centredredbox {
+    width:500px;
+    margin: 50px auto 20px auto;
+    background: #eebbbb;
+    padding: 30px;
+    border: 3px solid #ddaaaa;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    -webkit-border-radius: 10px; 
+    text-align: center;
+}
+
 div.links {
     position:relative;
     left:-5px;
