--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -56,6 +56,15 @@ div.error a {
 	color:#888888;
 }
 
+div.recent {
+	background: #313131;
+    background: -moz-linear-gradient(top, #313131, #2d2d2d);
+    background: -webkit-gradient(linear,
+                left top, left bottom, from(#313131), to(#2d2d2d));
+    filter: progid:DXImageTransform.Microsoft.Gradient(
+                StartColorStr='#313131', EndColorStr='#2d2d2d', GradientType=0);
+}
+
 div.convoarea {
     background-color:#313131;
     background: -moz-linear-gradient(top, #222222, #313131);
