Highlighting of recent items is now configurable on the Appearance page, and can be turned off. Default is set to 15 minutes.

--- a/style/style.css
+++ b/style/style.css
@@ -318,8 +318,12 @@ textarea#blocklist {
     width:90%;
 }
 
-p.setBannedPhrases {
-	height:20px;
+p.settingsPageButtonRow {
+	padding-bottom:20px;
+}
+
+a.settingsPageButton {
+	float:right;
 }
 
 a#setBannedPhrases {
