--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -58,11 +58,11 @@ div.error a {
 
 div.recent {
 	background: #313131;
-    background: -moz-linear-gradient(top, #313131, #2d2d2d);
+    background: -moz-linear-gradient(top, #393939, #313131);
     background: -webkit-gradient(linear,
-                left top, left bottom, from(#313131), to(#2d2d2d));
+                left top, left bottom, from(#393939), to(#313131));
     filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#313131', EndColorStr='#2d2d2d', GradientType=0);
+                StartColorStr='#393939', EndColorStr='#313131', GradientType=0);
 }
 
 div.convoarea {
