Added a 'post to:' span to make it more obvious what the buttons under the post box do.

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -11,6 +11,10 @@ span.counter {
     color:#666;
 }
 
+span.postto {
+    color:#666;
+}
+
 div.columnheading {
 	color:#666666;
 	background: #eeeeee;
