--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -15,6 +15,10 @@ span.counter {
     color:#666;
 }
 
+span.postto {
+    color:#666;
+}
+
 div.columnheading {
 	color:#888888;
 	background: #313131;
