--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,13 @@ span.replycounter {
 	font-size:21px;
 }
 
+span.postto {
+    font-weight:bold;
+	  font-size:21px;
+	  float:left;
+	  padding-right:5px;
+}
+
 div#mainarea {
     overflow-x: auto;
     overflow-y: auto;
