--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,31 @@
 /* Put your CSS here */
 html, body {
-    margin: 20px;
+ margin: 0;
+ padding: 0;
+ height: 100%;
+ width: 100%;
+}
+
+body {
+  display: table;
+}
+
+div#header {
+  background-color: #ffdddd;
+  height: 4em;
+  display: table-row;
+}
+
+div#columns {
+  overflow-y: scroll;
+  overflow-x: auto;
+  display: table-row;
+  background-color: #ddddff;
+}
+
+div.column {
+  float: left;
+  display: inline-block;
+  vertical-align:top;
+  background-color: #ddffdd;
 }
