--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,42 @@
 /* Put your CSS here */
 html, body {
- margin: 0;
- padding: 0;
- height: 100%;
- width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #eeeeee;
 }
 
 div#header {
-  height: 4em;
+  min-height: 4em;
   width: 100%;
   position: fixed;
   z-index: 10;
-  background-color: #ffdddd;
+  background: #7abcff; /* Old browsers */
+  background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+  border-bottom: 1px solid #888888;
+}
+
+input#postentry {
+  margin: 1.1em 1em 1em 1em;
+  height: 1.2em;
+  width: 70%;
+}
+
+div#accountselector {
+  display:none;
 }
 
 div#columns {
   position: relative;
   top: 4em;
   overflow-x: auto;
-  background-color: #ddddff;
 }
 
 div.column {
@@ -27,5 +45,36 @@ div.column {
   vertical-align:top;
   overflow: hidden;
   min-width: 300px;
-  background-color: #ddffdd;
+  margin: 0;
+  padding: 0.5em;
+}
+
+h4.columnheading {
+  margin: 0.5em 0;
+  font-weight: 100;
+  font-size: 1.2em;
+}
+
+div.item {
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  background-color: white;
+  border: 1px solid #cccccc;
+  font-weight: 100;
+}
+
+div.item-text {
+  overflow: hidden;
+  color: #333333;
+}
+
+div.item-text a {
+  color: #4096ee;
+  text-decoration: none;
+}
+
+div.item-fromuser {
+  margin-top: 0.5em;
+  font-size: 0.6em;
+  color: #888888;
 }
