--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/* Put your CSS here */
 html, body {
   margin: 0;
   padding: 0;
@@ -57,13 +56,14 @@ h4.columnheading {
 
 div.item {
   margin-bottom: 0.5em;
-  padding: 0.5em;
+  padding: 0;
   background-color: white;
   border: 1px solid #cccccc;
   font-weight: 100;
 }
 
 div.item-text {
+  padding: 0.5em;
   overflow: hidden;
   color: #333333;
 }
@@ -73,8 +73,28 @@ div.item-text a {
   text-decoration: none;
 }
 
+div.item-mediapreview {
+  margin: 0.5em 0 0 0;
+  max-width: 100%;
+}
+
+div.item-mediapreview a img {
+  max-width: 100%;
+}
+
 div.item-fromuser {
-  margin-top: 0.5em;
+  margin: 0;
+  padding: 0.5em;
   font-size: 0.6em;
-  color: #888888;
+  background-color: #f8f8f8;
+  color: #666666;
+}
+
+img.item-fromuseravatar {
+  float: left;
+  margin-right: 0.5em;
+}
+
+div.clear {
+  clear:both;
 }
