--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,13 +22,96 @@ div#header {
 }
 
 input#postentry {
-  margin: 1.1em 1em 1em 1em;
-  height: 1.2em;
+  margin: 1.1em 0 1em 1em;
+  padding: 0 0.3em;
   width: 70%;
+  font-size: 1em;
+  height: 2em;
+  background-color: white;
+  border: 1px solid #6666ff;
+  border-right: none;
+  border-radius: 0;
+  -webkit-appearance: none;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
-div#accountselector {
+span#postbuttonspan {
+  margin: 1.1em 0 1em -5px;
+  padding: 0 1em;
+  display:inline-block;
+  font-size: 1em;
+  line-height: 2em;
+  background: #5b5b5b;
+  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
+  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+span#postbuttonspan a {
+  color: white;
+  text-decoration: none;
+}
+
+span#postbuttondropdownspan {
+  margin: 1.1em 1em 1em -5px;
+  padding: 0 0.3em;
+  display:inline-block;
+  font-size: 1em;
+  line-height: 2em;
+  background: #5b5b5b;
+  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
+  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
+  border: 1px solid black;
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+span#postbuttondropdownspan a {
+  color: white;
+  text-decoration: none;
+}
+
+span#accountselector {
+  margin: 0 1em 0.2em 1em;
+  padding: 0.3em;
+  position: relative;
+  top: -8px;
   display:none;
+  line-height: 1.5em;
+  background: #5b5b5b;
+  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
+  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
+  border: 1px solid black;
+  border-top: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: white;
 }
 
 div#columns {
