--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,27 +91,13 @@ span#postbuttondropdownspan a {
   text-decoration: none;
 }
 
-span#accountselector {
-  margin: 0 1em 0.2em 1em;
-  padding: 0.3em;
-  position: relative;
-  top: -8px;
-  display:none;
-  line-height: 1.5em;
-  background: #5b5b5b;
-  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
-  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
-  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
-  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
-  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
-  border: 1px solid black;
-  border-top: none;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  color: white;
+div#accountselector {
+  padding: 0 1em;
+  margin: 0;
+}
+
+div#accountselector ul {
+  list-style-type: none;
 }
 
 div#columns {
