--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,28 @@ span#postbutton {
   cursor:default;
 }
 
+span#attachbutton {
+  margin: 1.1em 0 1em -5px;
+  padding: 0 0.5em;
+  display:inline-block;
+  line-height: 2em;
+  background: #5b5b5b;
+  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
+  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
+  border: 1px solid black;
+  color: white;
+  cursor:default;
+}
+
+span#attachbutton span.icon {
+  font-size:1.1em;
+}
+
 span#postbuttondropdown {
   margin: 1.1em 1em 1em -5px;
   padding: 0 0.3em;
@@ -154,7 +176,7 @@ div.item-mediapreview a img {
 div.item-fromuser {
   margin: 0;
   padding: 0.5em;
-  font-size: 0.6em;
+  font-size: 0.75em;
   background-color: #f8f8f8;
   color: #666666;
 }
