--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,26 @@ div#header {
   border-bottom: 1px solid #888888;
 }
 
+div#topmenu {
+  float:right;
+  margin: 0 0 0 2em;
+  padding: 0.1em;
+  background: #5b5b5b;
+  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
+  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
+  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
+}
+
+div#topmenu a {
+  margin: 0 1em;
+  color: white;
+  text-decoration: none;
+}
+
 textarea#postentry {
   margin: 1.1em 0 1em 1em;
   padding: 0.3em 0.3em 0.2em 0.3em;
