--- a/public/css/style-login.css
+++ b/public/css/style-login.css
@@ -83,9 +83,8 @@ form#login div.content p input.textbox {
   width: 8em;
 }
 
-div#errorbox {
-  z-index: 20;
-  margin: 1em;
+div#loginerrorbox {
+  margin: 0 0.5em 0.5em 0.5em;
   padding: 0.25em;
   background: #ffbbbb;
   color: black;
