--- a/public/css/style.css
+++ b/public/css/style.css
@@ -249,6 +249,32 @@ div#successbox {
   display: none;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba( 235, 235, 235, .8 )
+                url('../img/loading.gif')
+                50% 50%
+                no-repeat;
+    text-align: center;
+    font-weight: 100;
+    font-size: 1.2em;
+    padding-bottom: 1.2em;
+}
+
+body.loading {
+    overflow: hidden;
+}
+
+body.loading .modal {
+    display: block;
+}
+
 div.clear {
   clear:both;
 }
